Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,9 @@
    },
    "outputs": [],
    "source": [
-    "hometown = 'NYC'"
+    "hometown = 'NYC'\n",
+    "\n",
+    "\n"
    ]
   },
   {
